# ethereal-star

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: Entity.hpp  Game.hpp  Gui.hpp  Map.hpp  Player.hpp  SpriteInfo.hpp  TextureManager.hpp  Tile.hpp  test.hpp
src/: Entity.cpp  Game.cpp  Gui.cpp  Map.cpp  Player.cpp  SpriteInfo.cpp  TextureManager.cpp  Tile.cpp  main.cpp  test.cpp
